--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,3 +19,20 @@ spring:
 yandexMapsApi:
   apiKey: 7ffff1e0-b2fc-4cfa-ac3c-18a27f1c71b5
   url: https://geocode-maps.yandex.ru/1.x/
+
+resilience4j:
+  ratelimiter:
+    instances:
+      yandexMapsApi:
+        limit-for-period: 5
+        limit-refresh-period: 1s
+        timeout-duration: 0s
+  circuitbreaker:
+    instances:
+      yandexMapsApi:
+        minimumNumberOfCalls: 10
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowSize: 100
+        sliding-window-type: time_based
