fix location related bug; code clean up

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -11,3 +11,7 @@ spring:
       ddl-auto: validate
   flyway:
     enabled: true
+
+yandexMapsApi:
+  apiKey: 7ffff1e0-b2fc-4cfa-ac3c-18a27f1c71b5
+  url: https://geocode-maps.yandex.ru/1.x/
