--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,13 @@ spring:
   flyway:
     enabled: true
 
+
+application:
+  security:
+    jwt:
+      ttlRememberMe: 2592000000
+      ttl: 600000
+
 yandexMapsApi:
   apiKey: 7ffff1e0-b2fc-4cfa-ac3c-18a27f1c71b5
   url: https://geocode-maps.yandex.ru/1.x/
