--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,18 +15,11 @@ spring:
         format_sql: true
   flyway:
     enabled: true
-
-
-application:
-  security:
-    jwt:
-      ttlRememberMe: 2592000000
-      ttl: 600000
-
-yandexMapsApi:
-  apiKey: 7ffff1e0-b2fc-4cfa-ac3c-18a27f1c71b5
-  url: https://geocode-maps.yandex.ru/1.x/
-
+logging:
+  level:
+    org:
+      springframework:
+        security: TRACE
 resilience4j:
   ratelimiter:
     instances:
@@ -43,3 +36,14 @@ resilience4j:
         permittedNumberOfCallsInHalfOpenState: 3
         slidingWindowSize: 100
         sliding-window-type: time_based
+
+application:
+  security:
+    jwt:
+      ttlRememberMe: 2592000000
+      ttl: 600000
+      secretKey: DSHTzrEshdcuxb7J+fBZqsHVenAVCKyt72laTZxEfFk=
+
+yandexMapsApi:
+  apiKey: 7ffff1e0-b2fc-4cfa-ac3c-18a27f1c71b5
+  url: https://geocode-maps.yandex.ru/1.x/
