secured endpoints; add join and getPreview endpoints; modified activityrequest entity

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,13 +8,14 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
   flyway:
-    enabled: true
+    enabled: false
+
 logging:
   level:
     org:
