--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,13 +8,13 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
   flyway:
-    enabled: false
+    enabled: true
 
 logging:
   level:
