--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
   postgres:
-    image: postgres:17
+    image: postgis/postgis:latest
     container_name: postgres
     environment:
+      TZ: Europe/Moscow
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -13,6 +14,7 @@ services:
     image: confluentinc/cp-zookeeper:7.4.4
     container_name: zookeeper
     environment:
+      TZ: Europe/Moscow
       ZOOKEEPER_CLIENT_PORT: 2181
     ports:
       - 2181:2181
@@ -25,18 +27,18 @@ services:
     depends_on:
       - zookeeper
     environment:
+      TZ: Europe/Moscow
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_INTERNAL://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_REPLICATION_FACTOR: 1
 
   activities-service:
     build:
-      context: ./activities-service
-      dockerfile: ./Dockerfile
+      context: ./activity-service
     container_name: activities-service
     env_file:
       - .env
@@ -45,10 +47,11 @@ services:
       - broker
       - zookeeper
     environment:
+      TZ: Europe/Moscow
       SPRING_DATASOURCE_URL: ${POSTGRES_URL}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: https://broker:29092
     ports:
       - "8080:8080"
 
@@ -63,11 +66,12 @@ services:
       - broker
       - zookeeper
     environment:
+      TZ: Europe/Moscow
       SPRING_DATASOURCE_URL: ${POSTGRES_URL}
       SPRING_DATASOURCE_USERNAME: ${POSTGRES_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD}
       SPRING_MAIL_PASSWORD: ${EMAIL_PASSWORD}
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: https://broker:29092
     ports:
       - "8081:8081"
 
